--- a/index.html
+++ b/index.html
@@ -231,35 +231,6 @@
             </ul>
           </li>
 
-          <!-- <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Link 3
-              <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu dropdown-with-icons">
-              <li>
-                <a href="#">
-                  sub-link
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  sub-link
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  sub-link
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  sub-link
-                </a>
-              </li>
-            </ul>
-          </li> -->
-
           <li>
             <a href="pricing.html">
               料金と時間割
@@ -311,6 +282,7 @@
   </div>
 
   <div class="main main-raised">
+
     <div class="container">
       <div id="features" class="section">
 
@@ -328,7 +300,6 @@
           </div>
         </div> -->
 
-        <!-- <div class="features"> -->
         <div class="row">
           <div class="col-md-4">
             <div class="info">
@@ -376,21 +347,7 @@
             <img src="assets/img/call-banner-blue.png" alt="" class="call-now-btn">
           </a>
         </div>
-        <!-- <div class="row text-center u-margin-top-small">
-          <a href="#">
-            <img src="assets/img/call-banner-2.png" alt="" class="call-now-btn">
-          </a>
-        </div> -->
 
-
-        <!-- <div class="row text-center">
-          <a href="#" class="btn btn-primary btn-lg">
-            今すぐ無料体験レッスンを申し込む
-          </a>
-        </div> -->
-
-
-        <!-- </div> -->
       </div>
     </div>
     <!-- container -->
@@ -419,13 +376,7 @@
             <div class="col-md-5 col-md-offset-1">
               <div class="card card-no-shadow-background" style="background-image: url('assets/img/examples/card-project2.jpg')">
                 <div class="card-content">
-                  <!-- <label class="label label-rose">Client: Apple</label>
-                  <a href="#">
-                    <h3 class="card-title">Beautiful Project</h3>
-                  </a>
-                  <p class="card-description">
-                    Don't be scared of the truth because we need to restart the human foundation in truth.
-                  </p> -->
+
                 </div>
               </div>
             </div>
@@ -468,14 +419,9 @@
 
 
 
-
-
-
-
+    <!--     *********    PRICING     *********      -->
 
     <div class="cd-section pricing-section" id="pricing">
-
-      <!--     *********    PRICING 5     *********      -->
 
       <div class="pricing-5 section-gray" id="pricing-5 lessons">
 
@@ -516,11 +462,6 @@
                     プライベート/WEB
                   </a>
                 </li>
-                <!-- <li>
-                  <a href="#commercial" role="tab" data-toggle="tab">
-                    セミプライベート
-                  </a>
-                </li> -->
                 <li>
                   <a href="#commercial-2" role="tab" data-toggle="tab">
                     フリーカンバセーション
@@ -685,22 +626,18 @@
         </div>
       </div>
 
-      <!--     *********    END PRICING 5      *********      -->
-
     </div>
 
 
+    <!--     *********    END PRICING     *********      -->
 
 
 
 
 
-
-
+    <!--     *********    NEW STUDENTS      *********      -->
 
     <div class="cd-section" id="new-students">
-
-      <!--     *********    BLOGS 4      *********      -->
 
       <div class="blogs-4" id="blogs-4">
 
@@ -750,53 +687,26 @@
                 <a href="lesson-course.html" class="btn btn-primary">詳しく見る</a>
               </div>
 
-              <!-- <div class="card card-plain card-blog">
-                <div class="card-image">
-                  <a href="#">
-                    <img class="img img-raised" src="assets/img/examples/blog6.jpg" />
-                  </a>
-                </div>
-
-                <h6 class="category text-success">Lifestyle</h6>
-
-                <h3 class="card-title">
-                  <a href="#">We will breathe clean air and exercise</a>
-                </h3>
-
-                <h5 class="card-description">
-                  Don't be scared of the truth because we need to restart the human foundation in truth And I love you
-                  like Kanye loves Kanye I love Rick Owens’ bed design but the back is too high for the
-                  beams and angle of the ceiling I also wanted to point out that it’s the first album
-                  to go number 1 off of streaming...
-                </h5>
-
-                <a href="#" class="btn btn-primary btn-round"> Read More</a>
-              </div> -->
-
             </div>
 
           </div>
-
         </div>
+        <!-- container -->
+
       </div>
-
-      <!--     *********    END BLOGS 4      *********      -->
-
     </div>
 
 
+    <!--     *********    NEW STUDENTS    *********      -->
 
 
 
 
 
 
-
+    <!--     *********    TESTIMONIALS    *********      -->
 
     <div class="cd-section" id="testimonials">
-
-
-      <!--     *********    TESTIMONIALS 2     *********      -->
 
       <div class="testimonials-2 section-blue">
 
@@ -814,7 +724,6 @@
                 <div class="item active">
                   <div class="card card-testimonial card-plain">
                     <h3 class="card-title">Yumiko T.</h3>
-                    <!-- <h6 class="category text-muted">CEO @ Marketing Digital Ltd.</h6> -->
 
                     <div class="card-content">
                       <h5 class="card-description">"サンミハールに通うようになって、今回、何十年かぶりに英検準1級を受験しモチベーションが上がりました。スピーキングとライティングの能力を伸ばそうというきっかけにもなりました。うちでは、ひたすら過去問を解き、レッスンでは、スピーキングのテスト対策を実際の試験と同様の形式で何度も練習でき、二次試験に一回で合格でき、本当に嬉しく思っています。またいつか1級を取れたらと次の目標に向かって頑張っていきます。"
@@ -834,7 +743,6 @@
                 <div class="item">
                   <div class="card card-testimonial card-plain">
                     <h3 class="card-title">Kenji T.</h3>
-                    <!-- <h6 class="category text-muted">Designer @ Louboutin & Co.</h6> -->
 
                     <div class="card-content">
                       <h5 class="card-description">"約4ヶ月前から通ってます。先生たちが非常に丁寧に教えて下さるので、感謝しています。間違えがあるとすぐに訂正してくれて、ゆっくり理解できるまで教えてくれます。室内もいい雰囲気なので、必然的に英語をがんばろうという気になります。
@@ -855,7 +763,6 @@
                 <div class="item">
                   <div class="card card-testimonial card-plain">
                     <h3 class="card-title">S. T.</h3>
-                    <!-- <h6 class="category text-muted">Designer @ Louboutin & Co.</h6> -->
 
                     <div class="card-content">
                       <h5 class="card-description">"イギリスの大学の入学試験と学生ビザ取得のため、２ヶ月で３５レッスン受講。結果、IELTS 0.5 UP で all 6.0 or higher、全科目目標スコアに達してmission
@@ -877,7 +784,6 @@
                 <div class="item">
                   <div class="card card-testimonial card-plain">
                     <h3 class="card-title">Atsushi M.</h3>
-                    <!-- <h6 class="category text-muted">Designer @ Louboutin & Co.</h6> -->
 
                     <div class="card-content">
                       <h5 class="card-description">
@@ -898,7 +804,6 @@
                 <div class="item">
                   <div class="card card-testimonial card-plain">
                     <h3 class="card-title">M. T.</h3>
-                    <!-- <h6 class="category text-muted">Designer @ Louboutin & Co.</h6> -->
 
                     <div class="card-content">
                       <h5 class="card-description">
@@ -930,11 +835,10 @@
         </div>
       </div>
 
-      <!--     *********    END TESTIMONIALS 2      *********      -->
-
     </div>
 
 
+    <!--     *********    END TESTIMONIALS     *********      -->
 
 
 
@@ -1017,7 +921,7 @@
     <!-- <hr> -->
 
 
-
+    <!--     *********    TEAM     *********      -->
 
     <div class="container">
       <div id="team" class="section text-center">
@@ -1048,20 +952,6 @@
                       drop by and let's enjoy learning English.
                     </p>
 
-                    <!-- <div class="footer">
-                      <a href="#" class="btn btn-just-icon btn-simple btn-linkedin">
-                        <i class="fa fa-linkedin"></i>
-                      </a>
-                      <a href="#" class="btn btn-just-icon btn-simple btn-facebook">
-                        <i class="fa fa-facebook-square"></i>
-                      </a>
-                      <a href="#" class="btn btn-just-icon btn-simple btn-dribbble">
-                        <i class="fa fa-dribbble"></i>
-                      </a>
-                      <a href="#" class="btn btn-just-icon btn-simple btn-google">
-                        <i class="fa fa-google"></i>
-                      </a>
-                    </div> -->
                   </div>
                 </div>
               </div>
@@ -1087,20 +977,6 @@
                       you soon.
                     </p>
 
-                    <!-- <div class="footer">
-                      <a href="#" class="btn btn-just-icon btn-simple btn-linkedin">
-                        <i class="fa fa-linkedin"></i>
-                      </a>
-                      <a href="#" class="btn btn-just-icon btn-simple btn-facebook">
-                        <i class="fa fa-facebook-square"></i>
-                      </a>
-                      <a href="#" class="btn btn-just-icon btn-simple btn-dribbble">
-                        <i class="fa fa-dribbble"></i>
-                      </a>
-                      <a href="#" class="btn btn-just-icon btn-simple btn-google">
-                        <i class="fa fa-google"></i>
-                      </a>
-                    </div> -->
                   </div>
                 </div>
               </div>
@@ -1144,7 +1020,6 @@
                     <h4 class="card-title">Shoko</h4>
                     <h6 class="category text-muted">Receptionist</h6>
 
-                    <!-- <p class="card-description"> -->
                     <p class="text-dark-gray">
                       2013年からサンミハールにて受付業務、カウンセリング。英会話ほんとに楽しいです。合間にレッスンも受講し英検準1級に合格。そして副業は女子大生。いくつになっても学びたい皆さんの気持ちがわかります。試験対策のコツは私に聞いて下さいね。
                     </p>
@@ -1165,55 +1040,15 @@
     </div>
     <!-- container -->
 
-    <!-- <div class="container"> -->
 
+    <!--     *********    END STAFF     *********      -->
 
-
-    <!-- <div class="section section-contacts">
-        <div class="row">
-          <div class="col-md-8 col-md-offset-2">
-            <h2 class="text-center title">Contact Us</h2>
-            <h4 class="text-center description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ullam quo quaerat quam nostrum
-              sed necessitatibus, reprehenderit temporibus odio laboriosam saepe possimus ad deleniti
-              ducimus quis eos in exercitationem similique.</h4>
-            <form class="contact-form">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group label-floating">
-                    <label class="control-label">Your Name</label>
-                    <input type="email" class="form-control">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group label-floating">
-                    <label class="control-label">Your Email</label>
-                    <input type="email" class="form-control">
-                  </div>
-                </div>
-              </div>
-
-              <div class="form-group label-floating">
-                <label class="control-label">Your Messge</label>
-                <textarea class="form-control" rows="4"></textarea>
-              </div>
-
-              <div class="row">
-                <div class="col-md-4 col-md-offset-4 text-center">
-                  <button class="btn btn-primary btn-raised">
-                    Send Message
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-
-      </div> -->
 
 
     <hr>
 
-    <!-- ACCESS -->
+    <!--     *********    MAP ACCESS     *********      -->
+
     <div class="section">
       <div class="container">
         <div class="row">
@@ -1264,16 +1099,14 @@
       </div>
     </div>
 
-    <!-- END ACCESS -->
+    <!--     *********    END MAP ACCESS     *********      -->
 
 
 
 
-
+    <!--     *********    CONTACT US     *********      -->
 
     <div class="cd-section" id="contactus">
-
-      <!--     *********    CONTACT US 1     *********      -->
 
       <div class="contactus-1">
 
@@ -1384,123 +1217,20 @@
 
 
         <div id="contactUs2Map" class="custom-map">
-          <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d52487.26202897336!2d135.19267358540992!3d34.69373040457312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sjp!4v1536624732910"
-            width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe> -->
-
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6734.127239094919!2d135.19249769089447!3d34.690585869495564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008efb6fd98e19%3A0x76b91a66816d2100!2z44K144Oz44Of44OP44O844Or44Op44Oz44Ky44O844K444K144O844OT44K5!5e0!3m2!1sen!2sjp!4v1536725604295"
             width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
 
-
-
-
       </div>
-
-      <!--     *********    END CONTACT US 1      *********      -->
-
-
-      <!--     *********    CONTACT US 2     *********      -->
-
-      <!-- <div class="contactus-2">
-
-        <div class="row">
-          <div class="col-md-6">
-            <div class="card card-contact card-raised">
-              <form role="form" method="post">
-                <div class="header header-raised header-blue text-center">
-                  <h4 class="card-title">Contact Us</h4>
-                </div>
-                <div class="card-content">
-
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="info info-horizontal">
-                        <div class="icon icon-info">
-                          <i class="material-icons">phone</i>
-                        </div>
-                        <div class="description">
-                          <h5 class="info-title">Give us a ring</h5>
-                          <p> Michael Jordan<br> +40 762 321 762<br> Mon - Fri, 8:00-22:00
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="info info-horizontal">
-                        <div class="icon icon-info">
-                          <i class="material-icons">pin_drop</i>
-                        </div>
-                        <div class="description">
-                          <h5 class="info-title">Find us at the office</h5>
-                          <p> Bld Mihail Kogalniceanu, nr. 8,<br> 7652 Bucharest,<br> Romania
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="form-group label-floating form-info">
-                        <label class="control-label">Full Name</label>
-                        <input type="text" name="name" class="form-control">
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="form-group label-floating form-info">
-                        <label class="control-label">Email address</label>
-                        <input type="email" name="email" class="form-control" />
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="form-group label-floating form-info">
-                    <label class="control-label">Your message</label>
-                    <textarea name="message" class="form-control" id="message" rows="6"></textarea>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="checkbox">
-                        <label>
-  										<input type="checkbox" name="optionsCheckboxes">
-  										I'm not a robot
-  									</label>
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <button type="submit" class="btn btn-info pull-right">Send Message</button>
-                    </div>
-                  </div>
-                </div>
-
-              </form>
-            </div>
-          </div>
-
-          <div id="contactUs2Map" class="custom-map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d52487.26202897336!2d135.19267358540992!3d34.69373040457312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sjp!4v1536624732910"
-              width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
-          </div>
-
-        </div>
-        row
-
-
-      </div> -->
-
-      <!--     *********    END CONTACT US 2      *********      -->
-
     </div>
-    <!-- end section-contact-us -->
+
+    <!--     *********    END CONTACT US     *********      -->
 
 
 
 
 
-
-
-
+    <!--     *********    TRAIN ACCESS     *********      -->
 
     <div class="container">
 
@@ -1512,13 +1242,8 @@
           <br>
 
           <div class="row">
-
             <div class="col-md-4">
-              <!-- <div class="info"> -->
               <div class="u-margin-top-large">
-                <!-- <div class="icon icon-success text-center">
-                <i class="material-icons">verified_user</i>
-              </div> -->
                 <h4 class="info-title text-center">阪急神戸線<br>神戸三宮駅西口から ―</h4>
                 <p>
                   神戸三宮駅西口の改札を出て階段を降りると前にマクドナルドがあります。その左横の阪急高架下飲食店街を元町方面に向かって30秒くらい行くと信号があります。信号を渡ったらまたすぐ左の信号を渡り、三宮センター街を横切ったら10秒くらいで、三宮スクール前の英会話の看板が見えます。
@@ -1543,7 +1268,6 @@
                 </p>
               </div>
             </div>
-
           </div>
 
           <!-- <div class="row">
@@ -1603,13 +1327,7 @@
       </div>
     </div>
 
-
-
-
-
-
-
-
+    <!--     *********    END TRAIN ACCESS     *********      -->
 
 
     <!-- </div> -->
@@ -1618,7 +1336,6 @@
 
   </div>
   <!-- main main-raised -->
-
 
 
   <footer class="footer">
