--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
                 <div class="col-md-5">
                   <div class="card-image">
                     <a href="#">
-                      <img class="img" src="assets/img/faces/card-profile6-square.jpg" />
+                      <img class="img" src="assets/img/faces/matt.jpg" />
                     </a>
                   </div>
                 </div>
@@ -989,7 +989,7 @@
                 <div class="col-md-5">
                   <div class="card-image">
                     <a href="#">
-                      <img class="img" src="assets/img/faces/Akemi.jpg" />
+                      <img class="img" src="assets/img/faces/akemi.jpg" />
                     </a>
                   </div>
                 </div>
@@ -1011,7 +1011,7 @@
                 <div class="col-md-5">
                   <div class="card-image">
                     <a href="#">
-                      <img class="img" src="assets/img/faces/card-profile4-square.jpg" />
+                      <img class="img" src="assets/img/faces/shoko.jpg" />
                     </a>
                   </div>
                 </div>
