--- a/pricing.html
+++ b/pricing.html
@@ -22,7 +22,8 @@
 	<meta name="robots" content="ALL">
 	<meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
 	<meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-	<meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！" />
+	<meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！"
+	/>
 
 	<meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
 	<meta property="og:type" content="school">
@@ -33,12 +34,15 @@
 
 	<title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
 
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'
+	/>
 
 	<!--     Fonts and icons     -->
 	<link rel="
-	  stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+	  stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
+	/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
+	/>
 
 	<!-- CSS Files -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -69,7 +73,8 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="index.html">
-					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%" width="auto">
+					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%"
+					  width="auto">
 				</a>
 			</div>
 
@@ -113,11 +118,6 @@
 									生徒の声
 								</a>
 							</li>
-							<!-- <li>
-								<a href="index.html#events">
-									イベント
-								</a>
-							</li> -->
 							<li>
 								<a href="index.html#team">
 									チーム
@@ -235,16 +235,16 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h4>神戸・三宮の英会話サンミハールランゲージサービスの</h4>
 					<h1 class="title">料金と時間割</h1>
-					<!-- <h4>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore minus recusandae necessitatibus at omnis,
-						sapiente odio accusantium esse, totam reiciendis ex ea, dolor.
-					</h4> -->
 				</div>
 			</div>
 		</div>
 	</div>
 
 	<div class="main main-raised">
+
+
+		<!--     *********     PRICING TABLES     *********      -->
+
 		<div class="container">
 			<div class="pricing-2">
 				<div class="row">
@@ -439,10 +439,6 @@
 				</div>
 
 				<div class="row">
-					<!-- <div class="col-sm-12 text-center" style="margin-top: 30px;">
-						<a style="width: 275px;" href="#contactus" class="btn btn-primary" style="margin-right: 30px;">Book Free Trial Lesson</a>
-						<a style="width: 275px;" href="index.html#contactus" class="btn btn-primary">Contact us for more lesson info</a>
-					</div> -->
 					<!-- ************************************** -->
 					<div class="row">
 						<div class="row text-center u-margin-top-small">
@@ -465,7 +461,7 @@
 		</div>
 		<!-- container -->
 
-
+		<!--     *********     END PRICING TABLES     *********      -->
 
 		<!-- <hr /> -->
 
@@ -550,6 +546,8 @@
 
 		<hr>
 
+		<!--     *********     CONTACT US     *********      -->
+
 		<div class="container" id="contactus">
 
 			<div class="section section-contacts">
@@ -627,14 +625,10 @@
 		</div>
 		<!-- container -->
 
-
-
-
-
-
-
+		<!--     *********     END CONTACT US     *********      -->
 
 	</div>
+
 
 	<footer class="footer">
 		<div class="container">
