--- a/lesson-course-everyday.html
+++ b/lesson-course-everyday.html
@@ -118,11 +118,6 @@
 									生徒の声
 								</a>
 							</li>
-							<!-- <li>
-								<a href="index.html#events">
-									イベント
-								</a>
-							</li> -->
 							<li>
 								<a href="index.html#team">
 									チーム
@@ -212,11 +207,6 @@
 						</ul>
 					</li>
 
-					<!-- <li>
-						<a href="pricing.html" target="" class="btn btn-white btn-simple">
-							料金と時間割
-						</a>
-					</li> -->
 					<li>
 						<a href="pricing.html">
 							料金と時間割
@@ -228,22 +218,12 @@
 							About
 						</a>
 					</li>
-					<!-- <li>
-						<a href="about.html" target="" class="btn btn-white btn-simple">
-							About
-						</a>
-					</li> -->
 
 					<li>
 						<a href="index.html#contactus">
 							お問い合わせ
 						</a>
 					</li>
-					<!-- <li>
-						<a href="index.html#contactus" target="" class="btn btn-white btn-simple">
-							お問い合わせ
-						</a>
-					</li> -->
 				</ul>
 			</div>
 		</div>
@@ -260,20 +240,14 @@
 		</div>
 	</div>
 
+
 	<div class="main main-raised">
 
-
-
-
-
-
+		<!--     *********     SUMMARY      *********      -->
 
 		<div class="cd-section" id="features">
 
 			<div class="container">
-
-
-				<!--     *********     FEATURES 2      *********      -->
 
 				<div class="features-2">
 					<div class="row">
@@ -287,8 +261,6 @@
 						<div class="col-md-3">
 							<a href="#toeic" class="btn btn-primary btn-round" style="width: 100%">日常英会話</a>
 							<a href="#eiken" class="btn btn-primary btn-round" style="width: 100%">ビジネス英会話</a>
-							<!-- <a href="#toefl" class="btn btn-primary btn-round" style="width: 100%">TOEFL</a>
-							<a href="#ielts" class="btn btn-primary btn-round" style="width: 100%">IELTS</a> -->
 						</div>
 						<!-- <div class="col-md-8 col-md-offset-1">
 							<h5>TOEIC（トーイック）、英検、TOEFL（トフル）、IELTS（アイエルツ）他各種試験対策を経験豊かなネイティブ講師の指導と日本人スタッフによる無料のカウンセリングで目標達成！<br><br>
@@ -370,140 +342,137 @@
 
 				</div>
 
-				<!--     *********    END FEATURES 2      *********      -->
-
 			</div>
 			<!-- container -->
 
+		</div>
 
-			<hr>
+		<!--     *********    END SUMMARY     *********      -->
 
-
-
-
-			<div class="cd-section" id="blogs">
+		<hr>
 
 
-				<!--     *********     BLOGS 3      *********      -->
+		<!--     *********     CORPORATE LESSONS     *********      -->
 
-				<div class="blogs-3">
+		<div class="cd-section" id="blogs">
+			<div class="blogs-3">
 
-					<div class="container">
-						<div class="row">
+				<div class="container">
+					<div class="row">
 
-							<div class="col-md-10 col-md-offset-1">
-								<h2 class="title">日常英会話・ビジネス英会話</h2>
+						<div class="col-md-10 col-md-offset-1">
+							<h2 class="title">日常英会話・ビジネス英会話</h2>
 
-								<br />
-								<div class="anchor" style="display: hidden; position: relative; top: -100px" id="toeic"></div>
-								<div class="card card-plain card-blog">
-									<div class="row">
-										<div class="col-md-4">
-											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/talk-2.jpg" />
-											</div>
+							<br />
+							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="toeic"></div>
+							<div class="card card-plain card-blog">
+								<div class="row">
+									<div class="col-md-4">
+										<div class="card-image">
+											<img class="img img-raised" src="assets/img/examples/talk-2.jpg" />
 										</div>
-										<div class="col-md-8">
-											<h3 class="card-title u-margin-top-small-tablet">
-												<a href="#">日常英会話</a>
-											</h3>
-											<p>
-												入門、初級、中級、中級上、上級、特級などその方の今の英会話レベルを質疑応答によって流暢さ、文法力、語彙数、態度、リスニング力他の項目ごとに細かく20段階に分析し、現状のレベル認識とゴールの設定を行い、目的に見合ったテキスト、その他題材を使用して授業を進めていきます。（1年で３,２００円くらいの教材が多いです。）
-												ただ、教材は持ち込みもできますし、使わなくても大丈夫です。例えば、日本に住む外国人に街の案内をしたい。などご要望に合わせてご自分のやりたいことから、自由に授業を組み立てていくことができます。
-											</p>
-											<p>日常英会話のレッスン例<br><br> ●旅行英会話 旅行で英語を使いたい方には旅先で必要な状況設定の中で会話モデルを練習し、実際の場所や名前を使ってすぐに使える実践旅行英会話を習得します。
-												＜状況設定の例＞　空港、税関、飛行機、乗り物、地図と道順、ショッピング、ホテル、レストラン、劇場、観光、電話、郵便、病院　など
-											</p>
-											<p>●旅行直前英会話 旅行英会話の状況設定の中からご自分にとって一番重要なものをピックアップしてレッスン回数を決めます。海外のサッカー観戦の後好きな選手にサインと写真をお願いするなど、どんなご要望でも授業の中で練習することが出来、大変ご好評いただいております。
-											</p>
-											<div class="col-sm-12 text-center" style="margin-top: 30px;">
-												<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
-											</div>
+									</div>
+									<div class="col-md-8">
+										<h3 class="card-title u-margin-top-small-tablet">
+											<a href="#">日常英会話</a>
+										</h3>
+										<p>
+											入門、初級、中級、中級上、上級、特級などその方の今の英会話レベルを質疑応答によって流暢さ、文法力、語彙数、態度、リスニング力他の項目ごとに細かく20段階に分析し、現状のレベル認識とゴールの設定を行い、目的に見合ったテキスト、その他題材を使用して授業を進めていきます。（1年で３,２００円くらいの教材が多いです。）
+											ただ、教材は持ち込みもできますし、使わなくても大丈夫です。例えば、日本に住む外国人に街の案内をしたい。などご要望に合わせてご自分のやりたいことから、自由に授業を組み立てていくことができます。
+										</p>
+										<p>日常英会話のレッスン例<br><br> ●旅行英会話 旅行で英語を使いたい方には旅先で必要な状況設定の中で会話モデルを練習し、実際の場所や名前を使ってすぐに使える実践旅行英会話を習得します。
+											＜状況設定の例＞　空港、税関、飛行機、乗り物、地図と道順、ショッピング、ホテル、レストラン、劇場、観光、電話、郵便、病院　など
+										</p>
+										<p>●旅行直前英会話 旅行英会話の状況設定の中からご自分にとって一番重要なものをピックアップしてレッスン回数を決めます。海外のサッカー観戦の後好きな選手にサインと写真をお願いするなど、どんなご要望でも授業の中で練習することが出来、大変ご好評いただいております。
+										</p>
+										<div class="col-sm-12 text-center" style="margin-top: 30px;">
+											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
 										</div>
 									</div>
 								</div>
-
-								<hr class="hr-dark-blue">
-
-								<div class="anchor" style="display: hidden; position: relative; top: -100px" id="eiken"></div>
-								<div class="card card-plain card-blog">
-									<div class="row">
-										<div class="col-md-4">
-											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/business-4.jpg" />
-											</div>
-										</div>
-										<div class="col-md-8">
-											<h3 class="card-title u-margin-top-small-tablet">
-												<a href="#">ビジネス英会話 </a>
-											</h3>
-											<p>ビジネス英会話のレッスン例<br><br>
-												<strong>●プレゼンテーション</strong><br> 資料をそのままお持ち下さい。教師が添削し、その後より効果的なプレゼンが出来るようアドバイスし、質疑応答まで何度も練習していただきます。1回完結も出来ます。
-											</p>
-											<p>
-												<strong>●ビジネスミーティング</strong><br> ビジネス英会話の基礎ではミーティングでの発言に必要とされる基本的な英語会話力を養成すると同時に、発言回数が少なくてもうまくあいづちを打つなどの練習を行い、まずはよい聞き役になるためのトレーニングをします。ある程度苦手意識がなくなってきたところで、自分がイニシアティブをとって話すための表現、技法を学び具体的な（出来れば実際の仕事に関連した内容で）模擬会議の練習を行い実践力を養います。
-											</p>
-										</div>
-									</div>
-								</div>
-								<div class="card card-plain card-blog">
-									<div class="row">
-										<div class="col-md-4">
-											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/business-3.jpg" />
-											</div>
-										</div>
-										<div class="col-md-8">
-											<p>
-												<strong>●ファシリテーション</strong><br> 英語で行われるミーティングにおいて、ファシリテーター（進行役）がファシリテーションの表現や手法を身に着けているかどうかは重要です。ビジネスミーティングでどうすれば英語でうまく進行できるのか基本的な表現や手法をケーススタディ形式で学びます。既に経験のある方は、さらに議論を活性化するために効果的な英語表現や技法をネイティブの視点で学びます。
-											</p>
-											<p>
-												<strong>●電話・メール</strong><br> ビジネスシーンでの電話の応対、メールはビジネス英語の中でも比較的早く習得出来ます。職種、業種がはっきりしている場合は電話、メールの内容ごとに基本の文章をその方の会社で必要な用語を用いるなどしてひな形を作成し、応用の練習を行います。プライベートレッスンを受講の方はメールの文章は急がないものであれば宿題として無料で添削が出来ます。
-											</p>
-										</div>
-									</div>
-								</div>
-								<div class="card card-plain card-blog">
-									<div class="row">
-										<div class="col-md-4">
-											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/business-5.jpg" />
-											</div>
-										</div>
-										<div class="col-md-8">
-											<p>
-												<strong>●社内での会話</strong><br> ビジネスシーンにおいて立場によっては、報告、説明などほとんどひとりで発話をしなければならない場合もあります。そのためには論理的に話すトレーニングが重要になってきます。業種、役職などによって異なる英語の表現方法を具体的な事例によって学び、職場で実践的に使えるようにします。例：外国人上司との会話、外国人作業員への説明など
-											</p>
-											<p>
-												<strong>●一般ビジネス英語・英会話</strong><br> 将来、職場で英語を使って仕事をされたい方、または現在職場で日常的に英語を使用する方のためのプログラムです。初級から上級まで、レベルにあわせてシーン別のビジネス英会話を学びます。職場で英語は必要だが初心者の方には、簡単な文法で現在の職場で特に必要な表現から無理なく学んでいただけます。
-											</p>
-											<p>
-												<strong>●海外出張・赴任準備</strong><br>
-												<a href="#">海外赴任準備のページ</a>をご参照下さい。
-											</p>
-											<div class="col-sm-12 text-center" style="margin-top: 30px;">
-												<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
-											</div>
-										</div>
-									</div>
-								</div>
-
 							</div>
+
+							<hr class="hr-dark-blue">
+
+							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="eiken"></div>
+							<div class="card card-plain card-blog">
+								<div class="row">
+									<div class="col-md-4">
+										<div class="card-image">
+											<img class="img img-raised" src="assets/img/examples/business-4.jpg" />
+										</div>
+									</div>
+									<div class="col-md-8">
+										<h3 class="card-title u-margin-top-small-tablet">
+											<a href="#">ビジネス英会話 </a>
+										</h3>
+										<p>ビジネス英会話のレッスン例<br><br>
+											<strong>●プレゼンテーション</strong><br> 資料をそのままお持ち下さい。教師が添削し、その後より効果的なプレゼンが出来るようアドバイスし、質疑応答まで何度も練習していただきます。1回完結も出来ます。
+										</p>
+										<p>
+											<strong>●ビジネスミーティング</strong><br> ビジネス英会話の基礎ではミーティングでの発言に必要とされる基本的な英語会話力を養成すると同時に、発言回数が少なくてもうまくあいづちを打つなどの練習を行い、まずはよい聞き役になるためのトレーニングをします。ある程度苦手意識がなくなってきたところで、自分がイニシアティブをとって話すための表現、技法を学び具体的な（出来れば実際の仕事に関連した内容で）模擬会議の練習を行い実践力を養います。
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="card card-plain card-blog">
+								<div class="row">
+									<div class="col-md-4">
+										<div class="card-image">
+											<img class="img img-raised" src="assets/img/examples/business-3.jpg" />
+										</div>
+									</div>
+									<div class="col-md-8">
+										<p>
+											<strong>●ファシリテーション</strong><br> 英語で行われるミーティングにおいて、ファシリテーター（進行役）がファシリテーションの表現や手法を身に着けているかどうかは重要です。ビジネスミーティングでどうすれば英語でうまく進行できるのか基本的な表現や手法をケーススタディ形式で学びます。既に経験のある方は、さらに議論を活性化するために効果的な英語表現や技法をネイティブの視点で学びます。
+										</p>
+										<p>
+											<strong>●電話・メール</strong><br> ビジネスシーンでの電話の応対、メールはビジネス英語の中でも比較的早く習得出来ます。職種、業種がはっきりしている場合は電話、メールの内容ごとに基本の文章をその方の会社で必要な用語を用いるなどしてひな形を作成し、応用の練習を行います。プライベートレッスンを受講の方はメールの文章は急がないものであれば宿題として無料で添削が出来ます。
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="card card-plain card-blog">
+								<div class="row">
+									<div class="col-md-4">
+										<div class="card-image">
+											<img class="img img-raised" src="assets/img/examples/business-5.jpg" />
+										</div>
+									</div>
+									<div class="col-md-8">
+										<p>
+											<strong>●社内での会話</strong><br> ビジネスシーンにおいて立場によっては、報告、説明などほとんどひとりで発話をしなければならない場合もあります。そのためには論理的に話すトレーニングが重要になってきます。業種、役職などによって異なる英語の表現方法を具体的な事例によって学び、職場で実践的に使えるようにします。例：外国人上司との会話、外国人作業員への説明など
+										</p>
+										<p>
+											<strong>●一般ビジネス英語・英会話</strong><br> 将来、職場で英語を使って仕事をされたい方、または現在職場で日常的に英語を使用する方のためのプログラムです。初級から上級まで、レベルにあわせてシーン別のビジネス英会話を学びます。職場で英語は必要だが初心者の方には、簡単な文法で現在の職場で特に必要な表現から無理なく学んでいただけます。
+										</p>
+										<p>
+											<strong>●海外出張・赴任準備</strong><br>
+											<a href="#">海外赴任準備のページ</a>をご参照下さい。
+										</p>
+										<div class="col-sm-12 text-center" style="margin-top: 30px;">
+											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
+										</div>
+									</div>
+								</div>
+							</div>
+
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
+
+		<!--     *********     END CORPORATE LESSONS     *********      -->
 
 
 
 
+		<!-- <div class="cd-section" id="pricing"> -->
 
+		<!--     *********    PRICING 5     *********      -->
 
-			<!-- <div class="cd-section" id="pricing"> -->
-
-			<!--     *********    PRICING 5     *********      -->
-
-			<!-- <div class="pricing-5 section-gray" id="pricing-5 lessons">
+		<!-- <div class="pricing-5 section-gray" id="pricing-5 lessons">
 
 					<div class="container">
 						<div class="row">
@@ -666,160 +635,102 @@
 				</div>
 				-->
 
-			<!--     *********    END PRICING 5      *********      -->
+		<!--     *********    END PRICING 5      *********      -->
 
-			<!-- </div> -->
-
-
-
-			<hr>
+		<!-- </div> -->
 
 
 
+		<hr>
 
 
-			<div class="container" id="contactus">
 
-				<div class="section section-contacts">
-					<div class="row">
-						<div class="col-md-8 col-md-offset-2">
-							<h2 class="text-center title">今すぐ無料体験レッスンを申し込む</h2>
-							<h4 class="text-left description">
-								お問合せや無料体験レッスンのお申込みは、お電話<strong>（078-331-3035）</strong>、
-								<a href="mailto:study@sunmihall.com">メール</a>、または以下のお問合せフォームからお気軽にご連絡ください。
-							</h4>
-							<h4 class="text-left description">
-								下記フォームよりお問い合わせいただきました場合、自動返信メールが届きます。 受付完了の自動返信メールが届かない場合は、 お問い合わせが受付できていない可能性がございますので、お手数ですがお電話
-								<strong>（078-331-3035）</strong>にてご連絡ください。
-							</h4>
-							<form class="contact-form" role="form" method="post" action="contact.php">
-								<div class="row">
-									<div class="col-md-12">
-										<div class="form-group label-floating">
-											<label class="control-label">お名前（必須）</label>
-											<input name="name" type="text" class="form-control" required>
-										</div>
+		<!--     *********    CONTACT US      *********      -->
+
+		<div class="container" id="contactus">
+
+			<div class="section section-contacts">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2">
+						<h2 class="text-center title">今すぐ無料体験レッスンを申し込む</h2>
+						<h4 class="text-left description">
+							お問合せや無料体験レッスンのお申込みは、お電話<strong>（078-331-3035）</strong>、
+							<a href="mailto:study@sunmihall.com">メール</a>、または以下のお問合せフォームからお気軽にご連絡ください。
+						</h4>
+						<h4 class="text-left description">
+							下記フォームよりお問い合わせいただきました場合、自動返信メールが届きます。 受付完了の自動返信メールが届かない場合は、 お問い合わせが受付できていない可能性がございますので、お手数ですがお電話
+							<strong>（078-331-3035）</strong>にてご連絡ください。
+						</h4>
+						<form class="contact-form" role="form" method="post" action="contact.php">
+							<div class="row">
+								<div class="col-md-12">
+									<div class="form-group label-floating">
+										<label class="control-label">お名前（必須）</label>
+										<input name="name" type="text" class="form-control" required>
 									</div>
 								</div>
-								<div class="row">
-									<div class="col-md-6">
-										<div class="form-group label-floating">
-											<label class="control-label">メールアドレス（必須）</label>
-											<input name="email" type="email" class="form-control" required>
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="form-group label-floating">
-											<label class="control-label">メールアドレス（確認用）</label>
-											<input name="email-confirm" type="email" class="form-control" required>
-										</div>
+							</div>
+							<div class="row">
+								<div class="col-md-6">
+									<div class="form-group label-floating">
+										<label class="control-label">メールアドレス（必須）</label>
+										<input name="email" type="email" class="form-control" required>
 									</div>
 								</div>
-								<div class="row">
-									<div class="col-md-6">
-										<div class="form-group label-floating">
-											<label class="control-label">電話番号（必須）</label>
-											<input name="phone" type="text" class="form-control" required>
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="form-group label-floating">
-											<label class="control-label">折り返しのお電話ご希望の時間帯</label>
-											<input name="time" type="text" class="form-control">
-										</div>
+								<div class="col-md-6">
+									<div class="form-group label-floating">
+										<label class="control-label">メールアドレス（確認用）</label>
+										<input name="email-confirm" type="email" class="form-control" required>
 									</div>
 								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-6">
+									<div class="form-group label-floating">
+										<label class="control-label">電話番号（必須）</label>
+										<input name="phone" type="text" class="form-control" required>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="form-group label-floating">
+										<label class="control-label">折り返しのお電話ご希望の時間帯</label>
+										<input name="time" type="text" class="form-control">
+									</div>
+								</div>
+							</div>
 
-								<div class="form-group label-floating">
-									<label class="control-label">お問い合わせ内容</label>
-									<textarea name="message" class="form-control" rows="4" required></textarea>
-								</div>
+							<div class="form-group label-floating">
+								<label class="control-label">お問い合わせ内容</label>
+								<textarea name="message" class="form-control" rows="4" required></textarea>
+							</div>
 
-								<div class="row">
-									<div class="col-md-5 col-md-offset-1 text-center">
-										<div class="g-recaptcha" data-sitekey="6Ldv6HYUAAAAALDLX4TmV8sTlTRdSCMuu5uvxUm7"></div>
-									</div>
-									<div class="col-md-5 text-center">
-										<button class="btn btn-primary btn-raised">
-											送信
-											<i class="material-icons pull-right" style="margin-left: 10px;">send</i>
-										</button>
-									</div>
+							<div class="row">
+								<div class="col-md-5 col-md-offset-1 text-center">
+									<div class="g-recaptcha" data-sitekey="6Ldv6HYUAAAAALDLX4TmV8sTlTRdSCMuu5uvxUm7"></div>
 								</div>
-							</form>
-						</div>
+								<div class="col-md-5 text-center">
+									<button class="btn btn-primary btn-raised">
+										送信
+										<i class="material-icons pull-right" style="margin-left: 10px;">send</i>
+									</button>
+								</div>
+							</div>
+						</form>
 					</div>
-
 				</div>
 
 			</div>
-			<!-- container -->
-
-
-
-
-
-
-
 
 		</div>
+		<!-- container -->
+
+
+		<!--     *********    END CONTACT US      *********      -->
+
 
 	</div>
 	<!-- main main-raised -->
 
-	<!-- <footer class="footer">
-		<div class="container">
-			<a class="footer-brand" href="#">Material Kit PRO</a>
-
-
-			<ul class="pull-center">
-				<li>
-					<a href="#">
-						Blog
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						Presentation
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						Discover
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						Payment
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						Contact Us
-					</a>
-				</li>
-			</ul>
-
-			<ul class="social-buttons pull-right">
-				<li>
-					<a href="https://twitter.com/CreativeTim" target="_blank" class="btn btn-just-icon btn-twitter btn-simple">
-						<i class="fa fa-twitter"></i>
-					</a>
-				</li>
-				<li>
-					<a href="https://www.facebook.com/CreativeTim" target="_blank" class="btn btn-just-icon btn-facebook btn-simple">
-						<i class="fa fa-facebook-square"></i>
-					</a>
-				</li>
-				<li>
-					<a href="https://www.instagram.com/CreativeTimOfficial" target="_blank" class="btn btn-just-icon btn-google btn-simple">
-						<i class="fa fa-google"></i>
-					</a>
-				</li>
-			</ul>
-
-		</div>
-	</footer> -->
 
 	<footer class="footer">
 		<div class="container">
