--- a/lesson-course.html
+++ b/lesson-course.html
@@ -22,7 +22,8 @@
 	<meta name="robots" content="ALL">
 	<meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
 	<meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-	<meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！" />
+	<meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！"
+	/>
 
 	<meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
 	<meta property="og:type" content="school">
@@ -33,12 +34,15 @@
 
 	<title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
 
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'
+	/>
 
 	<!--     Fonts and icons     -->
 	<link rel="
-	  stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+	  stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
+	/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
+	/>
 
 	<!-- CSS Files -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -69,7 +73,8 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="index.html">
-					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%" width="auto">
+					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%"
+					  width="auto">
 				</a>
 			</div>
 
@@ -113,11 +118,6 @@
 									生徒の声
 								</a>
 							</li>
-							<!-- <li>
-								<a href="index.html#events">
-									イベント
-								</a>
-							</li> -->
 							<li>
 								<a href="index.html#team">
 									チーム
@@ -240,20 +240,14 @@
 		</div>
 	</div>
 
+
 	<div class="main main-raised">
 
-
-
-
-
-
+		<!--     *********     FEATURES     *********      -->
 
 		<div class="cd-section" id="features">
 
 			<div class="container">
-
-
-				<!--     *********     FEATURES 2      *********      -->
 
 				<div class="features-2">
 					<div class="row">
@@ -308,16 +302,8 @@
 
 				</div>
 
-				<!--     *********    END FEATURES 2      *********      -->
-
 			</div>
-
-
-
-
-
-
-
+			<!-- container -->
 
 
 			<div class="container">
@@ -436,7 +422,7 @@
 
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-project2.jpg');">
 										<div class="card-content">
-											<p class="card-description">テキストは使わず、旬の話題を中心に自由に英会話を楽しんでいただくクラスです。何年も英語を勉強しているのに実際に外国人を目にすると話せない…と言う様な悩みを持たれたことがあるのではないでしょうか。サンミハールの講師と自由に英語で会話を楽しんで頂く中で、ご自身の英会話力を高めて頂こうというものです。<br> 毎日受講して頂ける自由予約制の受け放題コースと2か月毎のチケット制コースがあります。
+											<p class="card-description">テキストは使わず、旬の話題を中心に自由に英会話を楽しんでいただくクラスです。何年も英語を勉強しているのに実際に外国人を目にすると話せない…と言う様な悩みを持たれたことがあるのではないでしょうか。サンミハールの講師と自由に英語で会話を楽しんで頂く中で、ご自身の英会話力を高めて頂こうというものです。<br>												毎日受講して頂ける自由予約制の受け放題コースと2か月毎のチケット制コースがあります。
 											</p>
 											<br>
 											<div class="footer text-center">
@@ -574,150 +560,97 @@
 			</div>
 			<!-- container -->
 
-			<hr>
+		</div>
+
+		<!--     *********     END FEATURES     *********      -->
+
+		<hr>
+
+		<!--     *********     CONTACT US     *********      -->
+
+		<div class="section section-contacts">
 
 			<div class="container">
 
-				<div class="section section-contacts">
-					<div class="row">
-						<div class="col-md-8 col-md-offset-2">
-							<h2 class="text-center title">今すぐ無料体験レッスンを申し込む</h2>
-							<h4 class="text-left description">
-								お問合せや無料体験レッスンのお申込みは、お電話<strong>（078-331-3035）</strong>、
-								<a href="mailto:study@sunmihall.com">メール</a>、または以下のお問合せフォームからお気軽にご連絡ください。
-							</h4>
-							<h4 class="text-left description">
-								下記フォームよりお問い合わせいただきました場合、自動返信メールが届きます。 受付完了の自動返信メールが届かない場合は、 お問い合わせが受付できていない可能性がございますので、お手数ですがお電話
-								<strong>（078-331-3035）</strong>にてご連絡ください。
-							</h4>
-							<form class="contact-form" role="form" method="post" action="contact.php">
-								<div class="row">
-									<div class="col-md-12">
-										<div class="form-group label-floating">
-											<label class="control-label">お名前（必須）</label>
-											<input name="name" type="text" class="form-control" required>
-										</div>
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2">
+						<h2 class="text-center title">今すぐ無料体験レッスンを申し込む</h2>
+						<h4 class="text-left description">
+							お問合せや無料体験レッスンのお申込みは、お電話<strong>（078-331-3035）</strong>、
+							<a href="mailto:study@sunmihall.com">メール</a>、または以下のお問合せフォームからお気軽にご連絡ください。
+						</h4>
+						<h4 class="text-left description">
+							下記フォームよりお問い合わせいただきました場合、自動返信メールが届きます。 受付完了の自動返信メールが届かない場合は、 お問い合わせが受付できていない可能性がございますので、お手数ですがお電話
+							<strong>（078-331-3035）</strong>にてご連絡ください。
+						</h4>
+						<form class="contact-form" role="form" method="post" action="contact.php">
+							<div class="row">
+								<div class="col-md-12">
+									<div class="form-group label-floating">
+										<label class="control-label">お名前（必須）</label>
+										<input name="name" type="text" class="form-control" required>
 									</div>
 								</div>
-								<div class="row">
-									<div class="col-md-6">
-										<div class="form-group label-floating">
-											<label class="control-label">メールアドレス（必須）</label>
-											<input name="email" type="email" class="form-control" required>
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="form-group label-floating">
-											<label class="control-label">メールアドレス（確認用）</label>
-											<input name="email-confirm" type="email" class="form-control" required>
-										</div>
+							</div>
+							<div class="row">
+								<div class="col-md-6">
+									<div class="form-group label-floating">
+										<label class="control-label">メールアドレス（必須）</label>
+										<input name="email" type="email" class="form-control" required>
 									</div>
 								</div>
-								<div class="row">
-									<div class="col-md-6">
-										<div class="form-group label-floating">
-											<label class="control-label">電話番号（必須）</label>
-											<input name="phone" type="text" class="form-control" required>
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="form-group label-floating">
-											<label class="control-label">折り返しのお電話ご希望の時間帯</label>
-											<input name="time" type="text" class="form-control">
-										</div>
+								<div class="col-md-6">
+									<div class="form-group label-floating">
+										<label class="control-label">メールアドレス（確認用）</label>
+										<input name="email-confirm" type="email" class="form-control" required>
 									</div>
 								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-6">
+									<div class="form-group label-floating">
+										<label class="control-label">電話番号（必須）</label>
+										<input name="phone" type="text" class="form-control" required>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="form-group label-floating">
+										<label class="control-label">折り返しのお電話ご希望の時間帯</label>
+										<input name="time" type="text" class="form-control">
+									</div>
+								</div>
+							</div>
 
-								<div class="form-group label-floating">
-									<label class="control-label">お問い合わせ内容</label>
-									<textarea name="message" class="form-control" rows="4" required></textarea>
-								</div>
+							<div class="form-group label-floating">
+								<label class="control-label">お問い合わせ内容</label>
+								<textarea name="message" class="form-control" rows="4" required></textarea>
+							</div>
 
-								<div class="row">
-									<div class="col-md-5 col-md-offset-1 text-center">
-										<div class="g-recaptcha" data-sitekey="6Ldv6HYUAAAAALDLX4TmV8sTlTRdSCMuu5uvxUm7"></div>
-									</div>
-									<div class="col-md-5 text-center">
-										<button class="btn btn-primary btn-raised">
-											送信
-											<i class="material-icons pull-right" style="margin-left: 10px;">send</i>
-										</button>
-									</div>
+							<div class="row">
+								<div class="col-md-5 col-md-offset-1 text-center">
+									<div class="g-recaptcha" data-sitekey="6Ldv6HYUAAAAALDLX4TmV8sTlTRdSCMuu5uvxUm7"></div>
 								</div>
-							</form>
-						</div>
+								<div class="col-md-5 text-center">
+									<button class="btn btn-primary btn-raised">
+										送信
+										<i class="material-icons pull-right" style="margin-left: 10px;">send</i>
+									</button>
+								</div>
+							</div>
+						</form>
 					</div>
-
 				</div>
 
 			</div>
 			<!-- container -->
 
-
-
-
-
-
-
-
 		</div>
+
+		<!--     *********     END CONTACT US     *********      -->
 
 	</div>
 	<!-- main main-raised -->
 
-	<!-- <footer class="footer">
-		<div class="container">
-			<a class="footer-brand" href="#">Material Kit PRO</a>
-
-
-			<ul class="pull-center">
-				<li>
-					<a href="#">
-						Blog
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						Presentation
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						Discover
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						Payment
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						Contact Us
-					</a>
-				</li>
-			</ul>
-
-			<ul class="social-buttons pull-right">
-				<li>
-					<a href="https://twitter.com/CreativeTim" target="_blank" class="btn btn-just-icon btn-twitter btn-simple">
-						<i class="fa fa-twitter"></i>
-					</a>
-				</li>
-				<li>
-					<a href="https://www.facebook.com/CreativeTim" target="_blank" class="btn btn-just-icon btn-facebook btn-simple">
-						<i class="fa fa-facebook-square"></i>
-					</a>
-				</li>
-				<li>
-					<a href="https://www.instagram.com/CreativeTimOfficial" target="_blank" class="btn btn-just-icon btn-google btn-simple">
-						<i class="fa fa-google"></i>
-					</a>
-				</li>
-			</ul>
-
-		</div>
-	</footer> -->
 
 	<footer class="footer">
 		<div class="container">
