tidy commenting and layout

--- a/index.html
+++ b/index.html
@@ -283,6 +283,8 @@
 
   <div class="main main-raised">
 
+    <!--     *********    FEATURES     *********      -->
+
     <div class="container">
       <div id="features" class="section">
 
@@ -352,12 +354,11 @@
     </div>
     <!-- container -->
 
-
+    <!--     *********    END FEATURES     *********      -->
 
     <hr>
 
-
-
+    <!--     *********    CAMPAIGN     *********      -->
 
     <div class="container">
       <div class="cd-section text-center" id="campaign">
@@ -415,8 +416,7 @@
       </div>
     </div>
 
-
-
+    <!--     *********    END CAMPAIGN     *********      -->
 
 
     <!--     *********    PRICING     *********      -->
@@ -632,9 +632,6 @@
     <!--     *********    END PRICING     *********      -->
 
 
-
-
-
     <!--     *********    NEW STUDENTS      *********      -->
 
     <div class="cd-section" id="new-students">
@@ -696,18 +693,12 @@
       </div>
     </div>
 
-
     <!--     *********    NEW STUDENTS    *********      -->
-
-
-
-
 
 
     <!--     *********    TESTIMONIALS    *********      -->
 
     <div class="cd-section" id="testimonials">
-
       <div class="testimonials-2 section-blue">
 
         <div class="container">
@@ -1041,9 +1032,7 @@
     <!-- container -->
 
 
-    <!--     *********    END STAFF     *********      -->
-
-
+    <!--     *********    END TEAM     *********      -->
 
     <hr>
 
@@ -1100,8 +1089,6 @@
     </div>
 
     <!--     *********    END MAP ACCESS     *********      -->
-
-
 
 
     <!--     *********    CONTACT US     *********      -->
@@ -1225,9 +1212,6 @@
     </div>
 
     <!--     *********    END CONTACT US     *********      -->
-
-
-
 
 
     <!--     *********    TRAIN ACCESS     *********      -->
