--- a/lesson-course-everyday.html
+++ b/lesson-course-everyday.html
@@ -417,12 +417,12 @@
 							</div>
 							<div class="card card-plain card-blog">
 								<div class="row">
-									<div class="col-md-4">
+									<div class="col-md-4 u-float-right">
 										<div class="card-image">
 											<img class="img img-raised" src="assets/img/examples/business-3.jpg" />
 										</div>
 									</div>
-									<div class="col-md-8">
+									<div class="col-md-8 u-float-left">
 										<p>
 											<strong>●ファシリテーション</strong><br> 英語で行われるミーティングにおいて、ファシリテーター（進行役）がファシリテーションの表現や手法を身に着けているかどうかは重要です。ビジネスミーティングでどうすれば英語でうまく進行できるのか基本的な表現や手法をケーススタディ形式で学びます。既に経験のある方は、さらに議論を活性化するために効果的な英語表現や技法をネイティブの視点で学びます。
 										</p>
