lesson-course-corporate page content and images added.

--- a/lesson-course-everyday.html
+++ b/lesson-course-everyday.html
@@ -22,8 +22,7 @@
 	<meta name="robots" content="ALL">
 	<meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
 	<meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-	<meta name="Description" content=TOEFL、IELTS対策なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達と英検、TOEIC、TOEFL、IELTS他試験対策を同時に学べます。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！
-	/>
+	<meta name="Description" content=TOEFL、IELTS対策なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達と英検、TOEIC、TOEFL、IELTS他試験対策を同時に学べます。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！ />
 
 	<meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
 	<meta property="og:type" content="school">
@@ -35,14 +34,11 @@
 
 	<title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
 
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'
-	/>
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
 	<!--     Fonts and icons     -->
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
-	/>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
-	/>
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
 	<!-- CSS Files -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -73,8 +69,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="index.html">
-					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%"
-					  width="auto">
+					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%" width="auto">
 				</a>
 			</div>
 
@@ -259,8 +254,8 @@
 
 					<div class="row">
 						<div class="col-md-3">
-							<a href="#toeic" class="btn btn-primary btn-round" style="width: 100%">日常英会話</a>
-							<a href="#eiken" class="btn btn-primary btn-round" style="width: 100%">ビジネス英会話</a>
+							<a href="#kaiwa" class="btn btn-primary btn-round" style="width: 100%">日常英会話</a>
+							<a href="#business" class="btn btn-primary btn-round" style="width: 100%">ビジネス英会話</a>
 						</div>
 						<!-- <div class="col-md-8 col-md-offset-1">
 							<h5>TOEIC（トーイック）、英検、TOEFL（トフル）、IELTS（アイエルツ）他各種試験対策を経験豊かなネイティブ講師の指導と日本人スタッフによる無料のカウンセリングで目標達成！<br><br>
@@ -364,7 +359,7 @@
 							<h2 class="title">日常英会話・ビジネス英会話</h2>
 
 							<br />
-							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="toeic"></div>
+							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="kaiwa"></div>
 							<div class="card card-plain card-blog">
 								<div class="row">
 									<div class="col-md-4">
@@ -394,7 +389,7 @@
 
 							<hr class="hr-dark-blue">
 
-							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="eiken"></div>
+							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="business"></div>
 							<div class="card card-plain card-blog">
 								<div class="row">
 									<div class="col-md-4">
