--- a/lesson-course-corporate.html
+++ b/lesson-course-corporate.html
@@ -22,8 +22,7 @@
 	<meta name="robots" content="ALL">
 	<meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
 	<meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-	<meta name="Description" content=TOEFL、IELTS対策なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達と英検、TOEIC、TOEFL、IELTS他試験対策を同時に学べます。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！
-	/>
+	<meta name="Description" content=TOEFL、IELTS対策なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達と英検、TOEIC、TOEFL、IELTS他試験対策を同時に学べます。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！ />
 
 	<meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
 	<meta property="og:type" content="school">
@@ -35,14 +34,11 @@
 
 	<title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
 
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'
-	/>
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
 	<!--     Fonts and icons     -->
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
-	/>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
-	/>
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
 	<!-- CSS Files -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -73,8 +69,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="index.html">
-					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%"
-					  width="auto">
+					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%" width="auto">
 				</a>
 			</div>
 
@@ -229,12 +224,12 @@
 		</div>
 	</nav>
 
-	<div class="page-header header-filter header-small" data-parallax="true" style="background-image: url('assets/img/bg10.jpg');">
+	<div class="page-header header-filter header-small" data-parallax="true" style="background-image: url('assets/img/business.jpg');">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h4>神戸・三宮の英会話サンミハールランゲージサービスの</h4>
-					<h1 class="title">資格試験対策</h1>
+					<h1 class="title">法人向け英語研修・英文校正サービス</h1>
 				</div>
 			</div>
 		</div>
@@ -259,23 +254,20 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center">
 							<h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
-							<h2 class="title">TOEIC・英検・TOEFL・IELTS</h2>
+							<h2 class="title">法人向け英語研修・英文校正サービス</h2>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-md-3">
-							<a href="#toeic" class="btn btn-primary btn-round" style="width: 100%">TOEIC</a>
-							<a href="#eiken" class="btn btn-primary btn-round" style="width: 100%">英検</a>
-							<a href="#toefl" class="btn btn-primary btn-round" style="width: 100%">TOEFL</a>
-							<a href="#ielts" class="btn btn-primary btn-round" style="width: 100%">IELTS</a>
+							<a href="#corporate" class="btn btn-primary btn-round" style="width: 100%">法人向け英語研修</a>
+							<a href="#english" class="btn btn-primary btn-round" style="width: 100%">英文校正サービス</a>
 						</div>
 						<div class="col-md-8 col-md-offset-1">
-							<h5>TOEIC（トーイック）、英検、TOEFL（トフル）、IELTS（アイエルツ）他各種試験対策を経験豊かなネイティブ講師の指導と日本人スタッフによる無料のカウンセリングで目標達成！<br><br>								★ 試験対策をサンミハールに決めた理由<br> ① 無料体験レッスンで、実際のテスト形式の授業を受けて自分にもできると思えた。<br> ② 目標をクリアして海外に行った友人の口コミを聞いて。<br>								③ 料金がお手頃な上にネイティブの授業なので試験対策をしながら会話力もアップできそう。
+							<h5>国際化・情報化社会において、円滑なビジネスの取引に個人の英会話力は不可欠です。サンミハールでは1981年の創立以来、外資系製薬会社、化学薬品会社等派遣先の教育担当者の方々との意見交換を大切にし、常に学ぶ側に立ったカリキュラム開発に取り組んでいます。
 							</h5>
-							<h5>★実際のレッスン内容は？<br> 語学力の世界基準であるCEFRにも対応した英会話サンミハールのレベルチェックまたはPractice Test等による弱点の解析を行い、個人にあったレッスンプランを立てて短期、長期での目標設定をします。実践に即したレッスン内容で、その都度評価の確認ができるので、今自分がどのレベルにいるのか、後何をすれば良いのかが具体的にわかります。<br><br>								TOEIC SpeakingやWriting、英検の作文に二次面接試験、そしてTOEFL・IELTSのWritingにSpeakingの対策は試験対策の経験豊かなネイティブに教わるのが効果的。試験全般にわたる弱点の改善、強化すべき点は授業外の日本人カウンセラーによって無料で行われます。また解き方のコツなども日本語での解説が必要な場合は教師に授業中に、または日本人カウンセラーに授業外で日本語で聞くことが出来ます。サンミハールでは自分で出来ることは自分で、出来ないことは授業でやりましょうという、経済的で効果的な試験対策を行っています。
-								<br> ◎初心者の方には基礎的な英語力の養成を授業で行いつつ、宿題等によって中学英語レベルまで引き上げ試験の対策に移ります。
-							</h5>
+
+							</ul>
 							<div class="col-sm-12 text-center" style="margin-top: 30px;">
 								<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
 							</div>
@@ -362,127 +354,87 @@
 					<div class="row">
 
 						<div class="col-md-10 col-md-offset-1">
-							<h2 class="title">試験対策コース</h2>
+							<h2 class="title">法人向け英語研修</h2>
 
 							<br />
-							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="toeic"></div>
+							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="corporate"></div>
 							<div class="card card-plain card-blog">
 								<div class="row">
 									<div class="col-md-4">
 										<div class="card-image">
-											<img class="img img-raised" src="assets/img/examples/card-blog4.jpg" />
+											<img class="img img-raised" src="assets/img/examples/business-5.jpg" />
 										</div>
 									</div>
 									<div class="col-md-8">
 										<h3 class="card-title u-margin-top-small-tablet">
-											<a href="#">TOEIC</a>
+											<a href="#">法人向け英語研修</a>
 										</h3>
-										<p>
-											神戸・三宮の英会話サンミハールランゲージサービスのTOEIC（トーイック）コースは短期集中でのスコアアップが有効です。その方のレベルにより、より早く目標の点数に達するまで指導します。<br>
-											<strong>初心者(中学英語の理解に自信のない方)には基礎から丁寧に授業で学べます。その後以下の対策に進みます。</strong></p>
-										<ol>
-											<li>模試を受ける。</li>
-											<li>各パートに対しての理解度を「パーセンテージで評価」した分析表を元に弱点を確認する。</li>
-											<li>各問題に対する、また個人にあった勉強方法を無料カウンセリングで細く聞いて計画を立てる。</li>
-										</ol>
-										<p>など、以上は対策の一部です。詳しくはスクールにお問い合わせください。</p>
-										<div class="col-sm-12 text-center" style="margin-top: 30px;">
-											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
-										</div>
+										<ul>
+											<li>
+												<h4>特色</h4>
+											</li>
+											<li>
+												<ol>
+													<li>.講師はビジネスおよび英会話講師の経験を持つネイティブスピーカーです。さらに当校でよりハイレベルな訓練を受けた講師を派遣します。</li>
+													<li>プライベート／グループレッスンをお選び頂けます。</li>
+													<li>オーダーメイドのカリキュラムを作成します。</li>
+													<li>短期集中／1ヶ月／3ヶ月／6ヶ月／1年間のコースです。</li>
+													<li>「レッスン内容」は事業内容・会議・交渉・電話対応・報告業務・プレゼンテーション等ご担当者とお打ち合わせの上、決定いたします。</li>
+													<li>プログレスレポートはご要望に応じて3ヶ月、6ヶ月毎などで発行致します。（費用別途）</li>
+												</ol>
+											</li>
+											<li>
+												<h4>料金</h4>
+												<p>研修場所、内容、専門性によって異なります。ご質問、ご相談、お見積り等お気軽にお問い合わせ下さい。90分以上のレッスンでまた良心的な料金で講師を派遣致します。</p>
+											</li>
+											<li>
+												<h4>実績</h4>
+												<p>物流企業、大手外資系製薬会社、ビールメーカー、化学薬品メーカー、国公立大学、私立大学、公立病院等に教師を派遣</p>
+											</li>
+											<div class="col-sm-12 text-center" style="margin-top: 30px;">
+												<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
+											</div>
 									</div>
 								</div>
 							</div>
 
 							<hr class="hr-dark-blue">
 
-							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="eiken"></div>
+
+							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="english"></div>
 							<div class="card card-plain card-blog">
 								<div class="row">
 									<div class="col-md-4">
 										<div class="card-image">
-											<img class="img img-raised" src="assets/img/examples/eiken.jpg" />
+											<img class="img img-raised" src="assets/img/examples/business-4.jpg" />
 										</div>
 									</div>
 									<div class="col-md-8">
 										<h3 class="card-title u-margin-top-small-tablet">
-											<a href="#">英検</a>
+											<a href="#">英文校正サービス</a>
 										</h3>
 										<p>
-											「過去問を制する者は英検を制する！」英検の一次試験対策はお金をかけず、自宅でひたすら過去問を解くこと。とは言っても、一人でできない、わからないところは、レッスンで日本語で聞いて話して弱点補強し、合格ラインへと押し上げます。一次試験の作文対策は宿題で書いて来られた作文をネイティブ講師に添削してもらうのが、ベスト！一次、二次試験を問わず、サンミハールの単語テストで語彙力アップ！英検１級、準１級、２級、準２級、３級の二次試験の面接対策は神戸・三宮の英会話サンミハールランゲージサービスのネイティブの講師に行ってもらうのが、経済的で効果的。高校１年生で準１級合格の実績！
+											大切なビジネスの場でせっかくの素晴らしい日本語の文章も英文に訳した途端にその真意が伝わらず、残念な思いをされた経験はありませんか？
 										</p>
-										<div class="col-sm-12 text-center" style="margin-top: 30px;">
-											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<hr class="hr-dark-blue">
-
-							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="toefl"></div>
-							<div class="card card-plain card-blog">
-								<div class="row">
-									<div class="col-md-4">
-										<div class="card-image">
-											<img class="img img-raised" src="assets/img/examples/tofel.jpg" />
-										</div>
-									</div>
-									<div class="col-md-8">
-										<h3 class="card-title u-margin-top-small-tablet">
-											<a href="#">TOEFL</a>
-										</h3>
+										<p>サンミハールの校正担当者は世界のエキスパートではなく、日本（神戸）在住のベテラン校正技術を持ったマルチリンガルの英語ネイティブです。日本人が英文を作る時のよくある間違いや日本の文化を熟知しており、海外在住の校正技術者に比較して日本人作成の英文の校正には数段優れております。</p>
 										<p>
-											神戸・三宮の英会話サンミハールランゲージサービスのTOEFL（トフル）対策はここがお得！ 自宅で出来ることは自宅で、ネイティブ講師の指導が必要な部分は授業で行いますので、自分に必要のない講義を聞くような授業にお金を払う必要がなく、無駄なく効率的にスクールを活用していただけます。TOEFL（トフル）対策は英語を聞けて、読めて、書ける、または話せるという3技能ずつを組み合わせて使用出来る能力習得の為のトレーニングを行います。
+											またサンミハールの英文校正は、文章の作者と担当者が内容について電話で話すことも出来、正確でネイティブスピーカーに分り易い文章を作成します。
 										</p>
-										<ol>
-											<li>TOEFL （トフル）ボキャビル対策（語彙を増やす）</li>
-											<li>TOEFL （トフル）リーディング対策</li>
-											<li>TOEFL （トフル）リスニング対策</li>
-											<li>TOEFL （トフル）スピーキング対策</li>
-											<li>TOEFL （トフル）ライティング（作文）対策</li>
-											<li>TOEFL （トフル）パソコン対策</li>
-										</ol>
-										<p>の６つの対策を個人のレベル、必要性に合わせてカリキュラムを組み計画的に学んでいきます。 例えば、
-											<br> スピーキングのトレーニング
-											<br> Independent taskの対策-よく出題される仮定法や、未来形を使った文章がスラスラと出てくるようになるまで、スピーチまたはロールプレイ形式のスピーキングのトレーニング。<br>											Integrated taskの対策-スピーキングと同時にリーディングやリスニングでのメモの取り方も合わせて授業で学ぶ。<br> など。
+										<h4>普通料金　発注より3営業日納品～　10円～22円/単語 （消費税8％別途）　※納期は都度確認をお願します</h4>
+										<p>※単語量が多い場合は上記以上に日数を要する場合がございます。200単語程度の場合は翌日納品可能な場合もありますが、別途お見積りになります。<br>
+											お見積りは無料です。お気軽にお問い合わせください。
 										</p>
-										<p>★TOEFL （トフル）対策をされた生徒さんの体験談<br> サンミハールに通っている間に高校留学を決意。2年時にニュージーランドに9か月留学、帰国後サンミハールに通いながらアメリカの大学に行くため、TOEFL（トフル）550（iBT80）点以上を目指して勉強。サンミハールでは主にスピーキングとライティングの対策を実施。高校の授業でライティング、読解を怠らず頑張ったことも手伝って約1年半で580(iBT92)点を獲得。北テキサス大学に合格。大学では1学期終了ですぐprincipal
-											listに載るオールAの成績を収めることが出来た。など多数。
-										</p>
-										<div class="col-sm-12 text-center" style="margin-top: 30px;">
-											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<hr class="hr-dark-blue">
-
-							<div class="anchor" style="display: hidden; position: relative; top: -100px" id="ielts"></div>
-							<div class="card card-plain card-blog">
-								<div class="row">
-									<div class="col-md-4">
-										<div class="card-image">
-											<img class="img img-raised" src="assets/img/examples/ielts.jpg" />
-										</div>
-									</div>
-									<div class="col-md-8">
-										<h3 class="card-title u-margin-top-small-tablet">
-											<a href="#">IELTS</a>
-										</h3>
+										<h4>
+											サービス内容
+										</h4>
 										<p>
-											神戸・三宮の英会話サンミハールランゲージサービスは神戸三宮で一番にIELTS（アイエルツ）対策コースを開始したスクールです。IELTS（アイエルツ）のスピーキングと同時にIELTS（アイエルツ）のリーディングやIELTS（アイエルツ）のリスニングでのメモの取り方も授業で学べます。また、IELTSのライティングのポイントは授業で実際の作文の作業は自宅または空き教室で行うので大変経済的です。TOEFL（トフル）対策と同様、各セクションの対策を全般的に行う、または、個々の能力によって必要なセクション用の対策を別々に行うことが出来ます。
-											IELTS （アイエルツ）5.0、5.5、6.0、6.5、7.0、7.5、8.0、8.5、9.0　目標の方の対策です。<br> IELTS （アイエルツ）　ボキャビル対策（語彙を増やす）<br>											IELTS（アイエルツ） リスニング対策<br> IELTS （アイエルツ）リーディング対策<br> IELTS （アイエルツ）ライティング（作文）対策<br> IELTS （アイエルツ）スピーキング対策<br>											例えば、
-											<br> ライティングのトレーニング
-											<br> ほとんどの部分は宿題で行われます。 アカデミック・モジュールのTASK1は図や表からの読み取れる内容についての解説です。TASK2はトピックに対して自分の意見を理由をつけて述べる問題です。2つのタスクにはそれぞれの文章の冒頭に来るつなぎ言葉（transition
-											words）が違います。最適なつなぎ言葉を使用することによって得点アップに繋がりますので、自分なりのひな型を作ってしまい、本文にフォーカス出来る時間を作ることが短期間での対策には効果的です。
+											★ ビジネス文書、会議用文書、研究発表用文書<br>
+											★ 各種学会発表用文書（医学学会等）<br>
+											★ チラシ、ポスター、パンフレット、メニュー<br>
+											★ その他、あらゆる英文文書の校正を致します
 										</p>
-										<ol>
-											<li>書き方のコツを授業で学ぶ</li>
-											<li>ライティング練習問題の宿題　箇条書き、本文の両方を提出</li>
-											<li>添削してもらった文章の見直しとポイントを授業で確認</li>
-											<li>１～３を繰り返す</li>
-										</ol>
+										<h4>実績</h4>
+										<p>医学論文の英文校正、国公立大学ホームページの英文校正、スポーツ用品メーカーポスター英文校正、大学文学部教授の論文他多数。</p>
 										<div class="col-sm-12 text-center" style="margin-top: 30px;">
 											<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
 										</div>
