--- a/lesson-course-toeic.html
+++ b/lesson-course-toeic.html
@@ -22,8 +22,7 @@
 	<meta name="robots" content="ALL">
 	<meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
 	<meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-	<meta name="Description" content=TOEFL、IELTS対策なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達と英検、TOEIC、TOEFL、IELTS他試験対策を同時に学べます。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！
-	/>
+	<meta name="Description" content=TOEFL、IELTS対策なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達と英検、TOEIC、TOEFL、IELTS他試験対策を同時に学べます。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！ />
 
 	<meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
 	<meta property="og:type" content="school">
@@ -35,14 +34,11 @@
 
 	<title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
 
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'
-	/>
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
 	<!--     Fonts and icons     -->
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
-	/>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
-	/>
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
 	<!-- CSS Files -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -73,8 +69,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="index.html">
-					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%"
-					  width="auto">
+					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%" width="auto">
 				</a>
 			</div>
 
@@ -155,6 +150,11 @@
 								</a>
 							</li>
 							<li>
+								<a href="lesson-course-corporate.html">
+									法人向け英語研修
+								</a>
+							</li>
+							<li>
 								<a href="lesson-course-toeic.html">
 									TOEIC・英検
 								</a>
@@ -167,11 +167,6 @@
 							<li>
 								<a href="lesson-course-medical.html">
 									医療英会話
-								</a>
-							</li>
-							<li>
-								<a href="lesson-course-corporate.html">
-									法人向け英語研修
 								</a>
 							</li>
 							<li>
@@ -264,9 +259,11 @@
 							<a href="#ielts" class="btn btn-primary btn-round" style="width: 100%">IELTS</a>
 						</div>
 						<div class="col-md-8 col-md-offset-1">
-							<h5>TOEIC（トーイック）、英検、TOEFL（トフル）、IELTS（アイエルツ）他各種試験対策を経験豊かなネイティブ講師の指導と日本人スタッフによる無料のカウンセリングで目標達成！<br><br>								★ 試験対策をサンミハールに決めた理由<br> ① 無料体験レッスンで、実際のテスト形式の授業を受けて自分にもできると思えた。<br> ② 目標をクリアして海外に行った友人の口コミを聞いて。<br>								③ 料金がお手頃な上にネイティブの授業なので試験対策をしながら会話力もアップできそう。
+							<h5>TOEIC（トーイック）、英検、TOEFL（トフル）、IELTS（アイエルツ）他各種試験対策を経験豊かなネイティブ講師の指導と日本人スタッフによる無料のカウンセリングで目標達成！<br><br> ★ 試験対策をサンミハールに決めた理由<br> ① 無料体験レッスンで、実際のテスト形式の授業を受けて自分にもできると思えた。<br> ② 目標をクリアして海外に行った友人の口コミを聞いて。<br> ③
+								料金がお手頃な上にネイティブの授業なので試験対策をしながら会話力もアップできそう。
 							</h5>
-							<h5>★実際のレッスン内容は？<br> 語学力の世界基準であるCEFRにも対応した英会話サンミハールのレベルチェックまたはPractice Test等による弱点の解析を行い、個人にあったレッスンプランを立てて短期、長期での目標設定をします。実践に即したレッスン内容で、その都度評価の確認ができるので、今自分がどのレベルにいるのか、後何をすれば良いのかが具体的にわかります。<br><br>								TOEIC SpeakingやWriting、英検の作文に二次面接試験、そしてTOEFL・IELTSのWritingにSpeakingの対策は試験対策の経験豊かなネイティブに教わるのが効果的。試験全般にわたる弱点の改善、強化すべき点は授業外の日本人カウンセラーによって無料で行われます。また解き方のコツなども日本語での解説が必要な場合は教師に授業中に、または日本人カウンセラーに授業外で日本語で聞くことが出来ます。サンミハールでは自分で出来ることは自分で、出来ないことは授業でやりましょうという、経済的で効果的な試験対策を行っています。
+							<h5>★実際のレッスン内容は？<br> 語学力の世界基準であるCEFRにも対応した英会話サンミハールのレベルチェックまたはPractice Test等による弱点の解析を行い、個人にあったレッスンプランを立てて短期、長期での目標設定をします。実践に即したレッスン内容で、その都度評価の確認ができるので、今自分がどのレベルにいるのか、後何をすれば良いのかが具体的にわかります。<br><br> TOEIC
+								SpeakingやWriting、英検の作文に二次面接試験、そしてTOEFL・IELTSのWritingにSpeakingの対策は試験対策の経験豊かなネイティブに教わるのが効果的。試験全般にわたる弱点の改善、強化すべき点は授業外の日本人カウンセラーによって無料で行われます。また解き方のコツなども日本語での解説が必要な場合は教師に授業中に、または日本人カウンセラーに授業外で日本語で聞くことが出来ます。サンミハールでは自分で出来ることは自分で、出来ないことは授業でやりましょうという、経済的で効果的な試験対策を行っています。
 								<br> ◎初心者の方には基礎的な英語力の養成を授業で行いつつ、宿題等によって中学英語レベルまで引き上げ試験の対策に移ります。
 							</h5>
 							<div class="col-sm-12 text-center" style="margin-top: 30px;">
@@ -439,9 +436,10 @@
 										</ol>
 										<p>の６つの対策を個人のレベル、必要性に合わせてカリキュラムを組み計画的に学んでいきます。 例えば、
 											<br> スピーキングのトレーニング
-											<br> Independent taskの対策-よく出題される仮定法や、未来形を使った文章がスラスラと出てくるようになるまで、スピーチまたはロールプレイ形式のスピーキングのトレーニング。<br>											Integrated taskの対策-スピーキングと同時にリーディングやリスニングでのメモの取り方も合わせて授業で学ぶ。<br> など。
+											<br> Independent taskの対策-よく出題される仮定法や、未来形を使った文章がスラスラと出てくるようになるまで、スピーチまたはロールプレイ形式のスピーキングのトレーニング。<br> Integrated taskの対策-スピーキングと同時にリーディングやリスニングでのメモの取り方も合わせて授業で学ぶ。<br> など。
 										</p>
-										<p>★TOEFL （トフル）対策をされた生徒さんの体験談<br> サンミハールに通っている間に高校留学を決意。2年時にニュージーランドに9か月留学、帰国後サンミハールに通いながらアメリカの大学に行くため、TOEFL（トフル）550（iBT80）点以上を目指して勉強。サンミハールでは主にスピーキングとライティングの対策を実施。高校の授業でライティング、読解を怠らず頑張ったことも手伝って約1年半で580(iBT92)点を獲得。北テキサス大学に合格。大学では1学期終了ですぐprincipal
+										<p>★TOEFL （トフル）対策をされた生徒さんの体験談<br>
+											サンミハールに通っている間に高校留学を決意。2年時にニュージーランドに9か月留学、帰国後サンミハールに通いながらアメリカの大学に行くため、TOEFL（トフル）550（iBT80）点以上を目指して勉強。サンミハールでは主にスピーキングとライティングの対策を実施。高校の授業でライティング、読解を怠らず頑張ったことも手伝って約1年半で580(iBT92)点を獲得。北テキサス大学に合格。大学では1学期終了ですぐprincipal
 											listに載るオールAの成績を収めることが出来た。など多数。
 										</p>
 										<div class="col-sm-12 text-center" style="margin-top: 30px;">
@@ -467,7 +465,7 @@
 										</h3>
 										<p>
 											神戸・三宮の英会話サンミハールランゲージサービスは神戸三宮で一番にIELTS（アイエルツ）対策コースを開始したスクールです。IELTS（アイエルツ）のスピーキングと同時にIELTS（アイエルツ）のリーディングやIELTS（アイエルツ）のリスニングでのメモの取り方も授業で学べます。また、IELTSのライティングのポイントは授業で実際の作文の作業は自宅または空き教室で行うので大変経済的です。TOEFL（トフル）対策と同様、各セクションの対策を全般的に行う、または、個々の能力によって必要なセクション用の対策を別々に行うことが出来ます。
-											IELTS （アイエルツ）5.0、5.5、6.0、6.5、7.0、7.5、8.0、8.5、9.0　目標の方の対策です。<br> IELTS （アイエルツ）　ボキャビル対策（語彙を増やす）<br>											IELTS（アイエルツ） リスニング対策<br> IELTS （アイエルツ）リーディング対策<br> IELTS （アイエルツ）ライティング（作文）対策<br> IELTS （アイエルツ）スピーキング対策<br>											例えば、
+											IELTS （アイエルツ）5.0、5.5、6.0、6.5、7.0、7.5、8.0、8.5、9.0　目標の方の対策です。<br> IELTS （アイエルツ）　ボキャビル対策（語彙を増やす）<br> IELTS（アイエルツ） リスニング対策<br> IELTS （アイエルツ）リーディング対策<br> IELTS （アイエルツ）ライティング（作文）対策<br> IELTS （アイエルツ）スピーキング対策<br> 例えば、
 											<br> ライティングのトレーニング
 											<br> ほとんどの部分は宿題で行われます。 アカデミック・モジュールのTASK1は図や表からの読み取れる内容についての解説です。TASK2はトピックに対して自分の意見を理由をつけて述べる問題です。2つのタスクにはそれぞれの文章の冒頭に来るつなぎ言葉（transition
 											words）が違います。最適なつなぎ言葉を使用することによって得点アップに繋がりますので、自分なりのひな型を作ってしまい、本文にフォーカス出来る時間を作ることが短期間での対策には効果的です。
