--- a/pricing.html
+++ b/pricing.html
@@ -22,8 +22,7 @@
 	<meta name="robots" content="ALL">
 	<meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
 	<meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-	<meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！"
-	/>
+	<meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！" />
 
 	<meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
 	<meta property="og:type" content="school">
@@ -34,15 +33,12 @@
 
 	<title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
 
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'
-	/>
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
 	<!--     Fonts and icons     -->
 	<link rel="
-	  stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
-	/>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
-	/>
+	  stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
 	<!-- CSS Files -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -73,8 +69,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="index.html">
-					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%"
-					  width="auto">
+					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%" width="auto">
 				</a>
 			</div>
 
@@ -155,6 +150,11 @@
 								</a>
 							</li>
 							<li>
+								<a href="lesson-course-corporate.html">
+									法人向け英語研修
+								</a>
+							</li>
+							<li>
 								<a href="lesson-course-toeic.html">
 									TOEIC・英検
 								</a>
@@ -167,11 +167,6 @@
 							<li>
 								<a href="lesson-course-medical.html">
 									医療英会話
-								</a>
-							</li>
-							<li>
-								<a href="lesson-course-corporate.html">
-									法人向け英語研修
 								</a>
 							</li>
 							<li>
